<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingBottom="30dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/title_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/text_title_form"
                android:textColor="@color/color_login"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <include
                    layout="@layout/botom_facebook">
                </include>
                <include
                    layout="@layout/botom_google">
                </include>
            </LinearLayout>

            <TextView
                android:id="@+id/subtitle_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_description"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/label_email"
                style="@style/label_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/txt_email"
                style="@style/input_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/label_f_name"
                style="@style/label_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firt_name" />

            <EditText
                android:id="@+id/txt_f_name"
                style="@style/input_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_name"
                style="@style/label_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/txt_name"
                style="@style/input_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/label_password"
                style="@style/label_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <TextView
                android:id="@+id/label_pass_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:text="@string/label_pass_description" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/input_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/label_birthday"
                style="@style/label_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/label_descripcion_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:text="@string/label_description_birth" />

            <EditText
                android:id="@+id/txt_date"
                style="@style/input_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:onClick="showDialog"
                android:background="@color/colorPrimary"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>