<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingBottom="30dp"
            android:paddingRight="20dp">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/logo_airbnb"
                />

            <TextView
                android:id="@+id/title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/text_title_login"
                android:textColor="@color/color_login"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/color_login"
                android:layout_marginTop="15dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/text_email" />
            <EditText
                android:id="@+id/txt_email"
                style="@style/input_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/label_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/color_login"
                android:text="@string/text_password" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/input_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:onClick="LoginUser"
                android:textColor="@color/white"
                android:text="@string/log_in"/>

            <TextView
                android:id="@+id/text_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:onClick="OpenRegister"
                android:textColor="@color/forgot"
                android:text="@string/forgot_password" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>